[gd_scene load_steps=5 format=3 uid="uid://dkn4xiey8mti3"]

[ext_resource type="Script" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/NewFieldPopup.gd" id="1_4vsnu"]
[ext_resource type="Script" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/NewField_Input.gd" id="2_dr4ey"]
[ext_resource type="PackedScene" uid="uid://b2dogu4xneier" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Text.tscn" id="3_fk2l1"]
[ext_resource type="PackedScene" uid="uid://blyuurjsfw16s" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/ItemType_Selection.tscn" id="4_rgqyx"]

[node name="newFieldPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4vsnu")

[node name="PanelContainer" type="Panel" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox1" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -327.0
offset_top = -101.0
offset_right = 328.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="HBox1" type="HBoxContainer" parent="PanelContainer/VBox1"]
layout_mode = 2
offset_right = 655.0
offset_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_dr4ey")

[node name="Input_Text" parent="PanelContainer/VBox1/HBox1" instance=ExtResource("3_fk2l1")]
custom_minimum_size = Vector2i(0, 75)
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 325.0
offset_bottom = 79.0
grow_horizontal = 1
grow_vertical = 1
size_flags_vertical = 0
label_text = "New Field Name"
is_label_button = false

[node name="Label" parent="PanelContainer/VBox1/HBox1/Input_Text" index="0"]
layout_mode = 2
offset_right = 325.0
offset_bottom = 25.0

[node name="Input" parent="PanelContainer/VBox1/HBox1/Input_Text" index="1"]
layout_mode = 2
offset_right = 325.0
caret_blink_interval = 0.5

[node name="input_templateBuffer" parent="PanelContainer/VBox1/HBox1/Input_Text" index="2"]
visible = false
layout_mode = 2
offset_right = 448.0

[node name="ItemType_Selection" parent="PanelContainer/VBox1/HBox1" instance=ExtResource("4_rgqyx")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 329.0
offset_right = 655.0
offset_bottom = 79.0
grow_horizontal = 1
grow_vertical = 1
size_flags_vertical = 0
selection_table_name = "DataTypes"
label_text = "Field Data Type"

[node name="Label" parent="PanelContainer/VBox1/HBox1/ItemType_Selection" index="0"]
offset_right = 326.0

[node name="Label_Button" parent="PanelContainer/VBox1/HBox1/ItemType_Selection/Label/HBox1" index="0"]
offset_right = 326.0
text = "Field Data Type"

[node name="Hide_Button" parent="PanelContainer/VBox1/HBox1/ItemType_Selection/Label/HBox1" index="1"]
offset_left = 229.0
offset_right = 326.0

[node name="Input" parent="PanelContainer/VBox1/HBox1/ItemType_Selection" index="1"]
visible = true
offset_right = 326.0
offset_bottom = 79.0
item_count = 17
selected = 0
popup/item_0/text = "Text"
popup/item_0/id = 0
popup/item_1/text = "Do Not Use"
popup/item_1/id = 1
popup/item_2/text = "User Input"
popup/item_2/id = 2
popup/item_3/text = "Number Range"
popup/item_3/id = 3
popup/item_4/text = "Audio"
popup/item_4/id = 4
popup/item_5/text = "Conditions"
popup/item_5/id = 5
popup/item_6/text = "Commands"
popup/item_6/id = 6
popup/item_7/text = "Dialog"
popup/item_7/id = 7
popup/item_8/text = "List"
popup/item_8/id = 8
popup/item_9/text = "Whole Number"
popup/item_9/id = 9
popup/item_10/text = "Decimal Number"
popup/item_10/id = 10
popup/item_11/text = "True or False"
popup/item_11/id = 11
popup/item_12/text = "Dropdown List"
popup/item_12/id = 12
popup/item_13/text = "Icon Display"
popup/item_13/id = 13
popup/item_14/text = "Scene Path"
popup/item_14/id = 14
popup/item_15/text = "Sprite Animation"
popup/item_15/id = 15
popup/item_16/text = "Vector 2 or 3"
popup/item_16/id = 16

[node name="input_templateBuffer" parent="PanelContainer/VBox1/HBox1/ItemType_Selection" index="2"]
visible = false
offset_top = 75.0
offset_right = 448.0
offset_bottom = 75.0

[node name="Table_Selection" parent="PanelContainer/VBox1/HBox1" instance=ExtResource("4_rgqyx")]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 602.0
offset_right = 900.0
offset_bottom = 75.0
grow_horizontal = 1
grow_vertical = 1
size_flags_vertical = 0

[node name="Label" parent="PanelContainer/VBox1/HBox1/Table_Selection" index="0"]
offset_right = 298.0

[node name="Label_Button" parent="PanelContainer/VBox1/HBox1/Table_Selection/Label/HBox1" index="0"]
offset_right = 298.0

[node name="Input" parent="PanelContainer/VBox1/HBox1/Table_Selection" index="1"]
visible = true
offset_right = 298.0
offset_bottom = 75.0
item_count = 17
selected = 0
popup/item_0/text = "Character Classes"
popup/item_0/id = 0
popup/item_1/text = "Characters"
popup/item_1/id = 1
popup/item_2/text = "Control Categories"
popup/item_2/id = 2
popup/item_3/text = "DataTypes"
popup/item_3/id = 3
popup/item_4/text = "Dialog Groups"
popup/item_4/id = 4
popup/item_5/text = "Event Animation States"
popup/item_5/id = 5
popup/item_6/text = "Event Triggers"
popup/item_6/id = 6
popup/item_7/text = "FieldPref"
popup/item_7/id = 7
popup/item_8/text = "Global Variables"
popup/item_8/id = 8
popup/item_9/text = "Inequalities"
popup/item_9/id = 9
popup/item_10/text = "Input Actions"
popup/item_10/id = 10
popup/item_11/text = "ItemType"
popup/item_11/id = 11
popup/item_12/text = "Items"
popup/item_12/id = 12
popup/item_13/text = "Maps"
popup/item_13/id = 13
popup/item_14/text = "SFX Groups"
popup/item_14/id = 14
popup/item_15/text = "Sprite Groups"
popup/item_15/id = 15
popup/item_16/text = "Table Data"
popup/item_16/id = 16

[node name="input_templateBuffer" parent="PanelContainer/VBox1/HBox1/Table_Selection" index="2"]
visible = false

[node name="HBox2" type="HBoxContainer" parent="PanelContainer/VBox1"]
layout_mode = 2
offset_top = 83.0
offset_right = 655.0
offset_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Accept" type="Button" parent="PanelContainer/VBox1/HBox2"]
layout_mode = 2
offset_right = 325.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "Accept"

[node name="Cancel" type="Button" parent="PanelContainer/VBox1/HBox2"]
layout_mode = 2
offset_left = 329.0
offset_right = 655.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "Cancel"

[connection signal="button_up" from="PanelContainer/VBox1/HBox2/Accept" to="." method="_accept_button_up"]
[connection signal="button_up" from="PanelContainer/VBox1/HBox2/Cancel" to="." method="_on_cancel_button_up"]

[editable path="PanelContainer/VBox1/HBox1/Input_Text"]
[editable path="PanelContainer/VBox1/HBox1/ItemType_Selection"]
[editable path="PanelContainer/VBox1/HBox1/ItemType_Selection/Label"]
[editable path="PanelContainer/VBox1/HBox1/Table_Selection"]
[editable path="PanelContainer/VBox1/HBox1/Table_Selection/Label"]
